test/tests/stages/18_structures/invalid_types/extra_credit/union_struct_conflicts/tag_decl_conflicts_with_def.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  ;
  union
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  return
  const int(0)
  ;
  }
